--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "shadow-cljs": "2.20.20",
-    "tailwindcss": "^3.2.4"
+    "shadcn-ui": "^0.2.2",
+    "shadow-cljs": "^2.24.0",
+    "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0"
   }
 }
