--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "shadcn-ui": "^0.2.2",
     "shadow-cljs": "^2.24.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.5"
   },
   "dependencies": {
     "react": "^18.2.0",
