--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@tailwindcss/forms": "^0.5.3",
     "shadcn-ui": "^0.2.2",
     "shadow-cljs": "^2.24.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-refresh": "^0.14.0"
+    "react-refresh": "^0.14.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
