--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26",
+    "postcss-import": "^15.1.0",
     "shadcn-ui": "^0.2.2",
     "shadow-cljs": "^2.24.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
   "dependencies": {
