--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/react": "^18.2.18",
+    "postcss": "^8.4.27",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
     "shadcn-ui": "^0.2.2",
     "shadow-cljs": "^2.24.0",
     "tailwindcss": "^3.3.2",
