--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,25 @@
 {
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "incremental": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
+    "compilerOptions": {
+	"lib": ["dom", "dom.iterable", "esnext"],
+	"allowJs": true,
+	"skipLibCheck": true,
+	"strict": true,
+	"forceConsistentCasingInFileNames": true,
+	"incremental": true,
+	"esModuleInterop": true,
+	"module": "esnext",
+	"moduleResolution": "node",
+	"resolveJsonModule": true,
+	"isolatedModules": true,
+	"jsx": "react",
+	"baseUrl": ".",
+	"paths": {
+	    "@/*": ["./*"]
+	},
+	"strictNullChecks": true,
+	"rootDir": "src/ts",
+	"outDir":"src/js",
     },
-    "strictNullChecks": true
-  },
-  "include": ["next-env.d.ts", "src/ts/**/*.ts", "src/ts/**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+    "include": ["next-env.d.ts", "src/ts/**/*.ts", "src/ts/**/*.tsx", ".next/types/**/*.ts"],
+    "exclude": ["node_modules"]
 }
